# avangard-sync

./: .flake8  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  avangard_client.py  avangard_parser.py  settings.py  sync_tool.py
etc/: supervisor-example.conf
tests/: conftest.py  utils.py
tests/test_avangard_client/: test_conn.py  test_get_income_payments.py  test_login.py
tests/test_avangard_parser/: test_parse_income_payments.py
tests/test_sync_tool/: test_get_income_payments.py  test_main.py
