[tool.poetry]
name = "avangard-sync"
version = "0.1.0"
description = ""
authors = ["Simon <spam@esemi.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
playwright = "^1.27.0"
lxml = "^4.9.1"
cssselect = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
wemake-python-styleguide = "^0.17.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.10.0"
mypy = "^0.982"
pytest-playwright = "^0.3.0"

[tool.mypy]
python_version = 3.9
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
